TImeInput Component Alignment Changes solved

--- a/react.js/src/Calendar-Project/TimeInput/TimeInput.css
+++ b/react.js/src/Calendar-Project/TimeInput/TimeInput.css
@@ -1,16 +1,26 @@
 .timeInput{
     display: flex;
+    align-items:baseline;
 }
 .input{
     margin: 15px;
     background-color: white;
     border: 2px solid green;
-    width: 180px;
-    height: 50px;
     font-size: 1.5rem;
     font-family: 'Kanit', sans-serif;
     font-family: 'Source Sans Pro', sans-serif;
     text-align: center;
+}
+
+select.input{
+    width: 136px;
+    height: 50px;
+}
+
+input[name="year"]{
+    padding:0px;
+    width: 132px;
+    height: 46px;
 }
 
 .input:focus{
